--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "1.1.4",
     "react-toastify": "^4.1.0",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
